# nullsec-hak5-toolkit

./: .gitignore  README.md  pyproject.toml
CSS/: ups.css
HTML/: ups.html
core/: __init__.py  cli.py  config.py  device.py  discovery.py  loot.py  payload.py
modules/: __init__.py
modules/bashbunny/: __init__.py
modules/keycroc/: __init__.py
modules/packetsquirrel/: __init__.py
modules/pineapple/: __init__.py
modules/rubberducky/: __init__.py
modules/sharkjack/: __init__.py
